[package]
name = "ftx_async"
license = "Apache-2.0"
description = "Unofficial Rust client for the FTX crypto exchange - Websocket and REST API"
repository = "https://github.com/IanMichaelAsh/ftx-async"
keywords = ["ftx", "crypto"]
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {version = "0.1" }
const_format = { version = "0.2"}
futures = {version = "0.3"}
futures-util = { version = "0.3" }
hex = { version = "0.4" }
hmac = { version = "0.12" }
num-traits = {version = "0.2"}
sha2 = {version = "0.10" }
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3"}
tracing-appender = {version = "0.2" }
tracing-futures = {version = "0.2"}
reqwest = { version = "0.11" }
rustc-hash = {version = "1.1.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
tokio = { version = "1.21", features = ["full"] }
tokio-tungstenite = { version = "0.17", features=["rustls-tls-native-roots"] }
tokio-test = { version = "0.4" } 
url = { version = "2"}

